ft(fixes): some touches to the frontend (#17)
- fix footer
- fix responsiveness on different devices
- style scrollbar
- embed twitter follow button
- update about.js file
- back to top button intergration
- fixed size to single articles
- fix size for posts on devices
- add a new docker logo
- contact form to have autofocus
- remove pagination as it complicated a lot of issues on the frontend
- add link to discord server
- add 404 page
- remove slack link
- remove twitter buttons makin site slow

[Delivers #166561798]

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -31,7 +31,7 @@ body {
     background-color: #011c23 !important;
     overflow: hidden;
     font-family: "Arial", cursive;
-    z-index: 10;
+    z-index: 10 !important;
     position: fixed;
     width: 100%;
     height: auto;
@@ -144,7 +144,7 @@ body {
 @media screen and (max-width: 700px) {
     .topnav.responsive {
         position: relative;
-        z-index: 10;
+        z-index: 10 !important;
     }
 
     .topnav.responsive a.icon {
